2009-05-16  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10165: FlexForms: wrong mm-relations after copy and localize (thanks to Peter Kuehn)

2009-05-13  Michael Stucki  <michael@typo3.org>

	* Fixed bug #11063: Wrong Content-length header breaks frontend output in some cases (thanks to Georg Kuehnberger)

2009-05-08  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11053: TYPO3_DB uses $GLOBALS['TYPO3_DB'] instead of $this (thanks to Stefan Geith)

2009-05-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11040: ENGINE modifier in ext_tables.sql cannot be parsed

2009-05-05  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8212: IRRE - Adding new child elements does not work on root page

2009-04-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #10982: htmlArea RTE: Broken link to css in some dialogue windows with Firefox 3.0.9 and TYPO3 4.2

2009-04-24  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #10977: Copyright in TYPO3 comment still 2008 (Thanks to Johannes Feustel)
	* Fixed bug #10823: IRRE long titles on groupdb fields are displayed wrong (<span title) (Thanks to Nabil Saleh)

2009-04-21  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #10939: Wrong nesting of <ul> <li> tags in expanded mount root in module file > filelist

2009-04-21  Ingo Renner  <ingo@typo3.org>

	* Fixed icon in t3skin for refresh

2009-04-20  Tobias Liebig <mail_typo3@etobi.de>

	* Fixed issue #9051: t3editor / On Mac Os X the key combination CMD+LEFT will close the t3editor

2009-04-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10759: RemoveXSS is incompatible with PHP >= 5.2.8

2009-04-17  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #2178: template::getTabMenu doubles ampersands (thanks to Stefano Kowalke)

2009-04-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10735: Wrong returnUrl with clipboard actions
	* Fixed bug #8795: Update button in User Admin -> Compare user settings doesn't work in IE7
