@@ -137,6 +137,9 @@ class ModuleMenu {
 		$menu    = '';
 		$onBlur  = $GLOBALS['CLIENT']['FORMSTYLE'] ? 'this.blur();' : '';
 
+		$tsConfiguration = $GLOBALS['BE_USER']->getTSConfig('options.moduleMenuCollapsable');
+		$collapsable = (isset($tsConfiguration['value']) && $tsConfiguration['value'] == 0) ? 0 : 1;
+
 		$rawModuleData = $this->getRawModuleData();
 
 		foreach($rawModuleData as $moduleKey => $moduleData) {
@@ -147,7 +150,11 @@ class ModuleMenu {
 				$moduleLabel = '<a href="#" onclick="top.goToModule(\''.$moduleData['name'].'\');'.$onBlur.'return false;">'.$moduleLabel.'</a>';
 			}
 
-			$menu .= '<li id="'.$moduleKey.'" class="menuSection" title="'.$moduleData['description'].'"><div class="'.($menuState ? 'collapsed' : 'expanded').'">'.$moduleData['icon']['html'].' '.$moduleLabel.'</div>';
+			$menu .= '<li id="modmenu_' . $moduleData['name'] . '" '.
+				($collapsable ? 'class="menuSection"' : '') .
+				' title="' . $moduleData['description'] . '">
+				<div class="' . ($menuState ? 'collapsed' : 'expanded') . '">' .
+				$moduleData['icon']['html'] . ' ' . $moduleLabel . '</div>';
 
 				// traverse submodules
 			if(is_array($moduleData['subitems'])) {
